# testask-npotelecom

testask-client/: .anjuta_sym_db.db  15_5pack  1_5k  2_5pack  3000pack  30_5pack  30pack  3pack  512pack  Makefile  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
testask-client/.anjuta/: default.profile
testask-client/.anjuta/session/: anjuta.session  dock-layout.xml
testask-client/Debug/: Makefile  config.status  libtool
testask-client/Debug/po/: Makefile  Makefile.in  POTFILES
testask-client/Debug/src/: Makefile  testask_client
testask-client/Debug/src/.deps/: common.Po  main.Po
testask-client/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
testask-client/po/: Makefile  Makefile.in
testask-client/src/: Makefile  Makefile.am  Makefile.in  common.c  common.c~  common.h  common.h~  main.c  main.c~  testask_client
testask-client/src/.deps/: common.Po  main.Po
testask-server/: .anjuta_sym_db.db  Makefile  config.status  configure  configure.ac  libtool
testask-server/.anjuta/session/: anjuta.session  dock-layout.xml
testask-server/Debug/: Makefile  config.h  config.status  libtool
testask-server/Debug/po/: Makefile  Makefile.in  POTFILES
testask-server/Debug/src/: Makefile  testask_server
testask-server/autom4te.cache/: output.0  output.1  requests  traces.1
testask-server/po/: Makefile  Makefile.in
testask-server/src/: Makefile  Makefile.am  Makefile.in  common.c  common.h  common.h~  main.c  main.c~  testask_server
testask-server/src/.deps/: main.Po
(+2 files in other folders)
